--- a/Freelancers.Api/Templates/EmailConfirmation.html
+++ b/Freelancers.Api/Templates/EmailConfirmation.html
@@ -457,7 +457,7 @@
                         <td class="email-masthead">
                             <a href="https://example.com"
                                class="f-fallback email-masthead_name">
-                                Survey Basket
+                                FreeLancers
                             </a>
                         </td>
                     </tr>
@@ -508,7 +508,7 @@
                                                     </td>
                                                 </tr>
                                             </table>
-                                            <p>Thanks, <br />Survey Basket team</p>
+                                            <p>Thanks, <br />Freelancers team</p>
                                             <!-- Sub copy -->
                                             <table class="body-sub" role="presentation">
                                                 <tr>
@@ -539,7 +539,7 @@
                                 <tr>
                                     <td class="content-cell" align="center">
                                         <p class="f-fallback sub align-center">
-                                            Survey Basket
+                                            Freelancers
                                             <br />1234 Street Rd. <br />Cairo, Egypt
                                         </p>
                                     </td>
